# test-taker

./: .gitignore  instructions.md
test-taker/: ARCHITECTURE.md  BEFORE_AFTER_SUMMARY.md  EDITORIAL_REFACTORING_GUIDE.md  GETTING_STARTED.md  INSTALLATION_VERIFIED.md  QUICK_REFERENCE.md  README.md  README_EDITORIAL_DESIGN.md  index.html  install.sh  json_docs.md  package-lock.json  package.json  tailwind.config.ts
test-taker/examples/: sample-response.json  sample-test.json
test-taker/scripts/: generate-icons.py
test-taker/src/: App.tsx  editorial.css  main.tsx
test-taker/src-tauri/: Cargo.toml  tauri.conf.json
test-taker/src-tauri/icons/: icon.icns
test-taker/src-tauri/src/: main.rs
test-taker/src/components/: AnswerDisplay.tsx  AppHeader.tsx  BottomControls.tsx  ChoiceLabel.tsx  ContentRenderer.tsx  HistoryList.tsx  HistoryScreen.tsx  HomeScreen.tsx  LaTeXPreview.tsx  PausedOverlay.tsx  QuestionNavGrid.tsx  QuestionPanel.tsx  ReadOnlyTestView.tsx  ResultsScreen.tsx  ReviewScreen.tsx  SettingsDialog.tsx  Sidebar.tsx  SplitPane.tsx  TestView.tsx  Timer.tsx  TopBar.tsx
test-taker/src/components/questions/: Matching.tsx  MultipleChoice.tsx  MultipleSelect.tsx  Numeric.tsx  Ordering.tsx  RichTextEditor.tsx  ShortAnswer.tsx  TrueFalse.tsx
test-taker/src/hooks/: useSettings.ts  useTestSession.ts
test-taker/src/schemas/: test-schema.json
test-taker/src/theme/: theme.ts
test-taker/src/types/: test.ts
test-taker/src/utils/: answers.ts  grading.ts  greeting.ts  history.ts  latex.ts  output.ts  settings.ts  storage.ts  timer.ts  validation.ts  windowTitle.ts
