[package]
name = "test-taker"
version = "1.1.0"
description = "Professional test-taking desktop application"
authors = ["Test Taker"]
edition = "2021"

[lib]
name = "test_taker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
